--- a/ImageWebsite/style.css
+++ b/ImageWebsite/style.css
@@ -1,18 +1,30 @@
-.container { 
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: center;
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-h1 { 
-    font-family: URW Chancery L, cursive; 
-    font-size: 3em;
-    border-bottom: 3px solid orange; 
-    text-align: center; 
-    width: 400px; 
-    vertical-align: center;
+body {
+  margin: 0px;
 }
-img { 
-    width: 450px;
-    height: 300px; 
+
+h1 {
+  font-family: URW Chancery L, cursive;
+  font-size: 3em;
+  border-bottom: 3px solid orange;
+  border-right: 3px solid orange;
+  box-shadow: 2px 2px gray;
+  text-align: center;
+  width: 400px;
+}
+
+img {
+  width: 450px;
+  height: 300px;
+  margin: 1em;
+  transition: all 1s;
+}
+
+img:hover {
+  transform: scale(2);
 }
